Add some icons. Includes Facebook cover photo. Updates social media links.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -141,7 +141,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img src="images/icons/ruler.png" />
+                            <img src="images/icons/square.svg" />
                             <span>{{listing.sq-footage}} Sq. ft.</span>
                           </td>
                           <td>
