--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -115,6 +115,19 @@ a {
   }
 }
 
+.contact-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+}
+
+.contact-subcontainer {
+  width: 100%;
+  margin: 0 auto;
+  padding-left: 80px;
+  max-width: $page-max-width;
+}
 #contact-us-home-section {
   position: relative;
   color: $grey;
@@ -128,14 +141,8 @@ a {
     z-index: 1;
   }
   .contact-content {
-    max-width: $page-max-width;
-    margin: 0 auto;
-    top: 50%;
-    transform: translateY(-50%);
-    left: $left-align-home;
     width: 42%;
-    z-index: 2;
-    position: absolute;
+    padding-top: 24px;
     .contact-header {
       font-size: 34px;
       background-color: white;
