Add some moving styles to the home page: Logo slides up 1 second after page load. Scroll arrow slides down. Text links are underlined when hovered.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -153,6 +153,13 @@
     {% include include-scripts.html %}
     <script>
       $(document).ready(function() {
+        var logo = $("#header-logo");
+
+        $(logo).addClass("prepareSlideUp");
+        setTimeout(function () {
+          $("#header-logo").addClass("slideUp");
+        }, 1000);
+
         $('.review-carousel').slick({
           "autoplay": false,
           "draggable": false,
