--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -85,9 +85,6 @@ a {
   }
 }
 
-.scroll-arrow {
-  cursor: pointer;
-}
 .content {
   position: relative;
 }
@@ -290,7 +287,32 @@ a {
       font-size: 1.2em;
       padding: 8px;
       > a {
+        position: relative;
+        color: white;
         text-decoration: none;
+        line-height: 2;
+      }
+      > a:hover {
+        color: white;
+      }
+      > a:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: white;
+        visibility: hidden;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transition: all 0.3s ease-in-out 0s;
+        transition: all 0.3s ease-in-out 0s;
+      }
+      > a:hover:before {
+        visibility: visible;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
       }
     }
   }
@@ -462,13 +484,39 @@ a {
       font-size: 2em;
       text-align: center;
       margin: 0;
-      li a {
-        display: block;
-        color: #888;
-        line-height: 1.875;
-        font-size: 1.125em;
-        text-decoration: none;
-        &.active {color: $primary-color;}
+      li {
+        > a {
+          color: #888;
+          line-height: 2;
+          font-size: 1.125em;
+          text-decoration: none;
+          position: relative;
+          &.active {
+            color: $primary-color;
+          }
+        }
+        > a:hover {
+          color: #888;
+        }
+        > a:before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          bottom: 0;
+          left: 0;
+          background-color: $primary-color;
+          visibility: hidden;
+          -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+          -webkit-transition: all 0.3s ease-in-out 0s;
+          transition: all 0.3s ease-in-out 0s;
+        }
+        > a:hover:before {
+          visibility: visible;
+          -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+        }
       }
     }
   }
@@ -524,15 +572,38 @@ a {
 
 #header-logo {
   height: 47px;
+  // setup like this in case browser isnt js enabled
+  &.prepareSlideUp {
+    position: relative;
+    top: 104px;
+    opacity: 0;
+    transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  }
+  &.slideUp {
+    opacity: 1;
+    top: 0;
+  }
 }
 
 .scroll-arrow {
+  cursor: pointer;
   position: absolute;
+  opacity: .8;
   width: 54px;
   margin-left: -(54px/2);
   bottom: 10%;
   left: 50%;
+  &:hover {
+    bottom: 9%;
+    opacity: 1;
+    transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  }
 }
+
 
 #header-text {
   font-family: $font-brand;
@@ -629,11 +700,17 @@ a {
 .navigation-arrow-left {
   transform: rotate(135deg);
   left: 8%;
+  &:hover {
+    transform: rotate(135deg) scale(1.3);
+  }
 }
 
 .navigation-arrow-right {
   transform: rotate(-45deg);
   right: 8%;
+  &:hover {
+    transform: rotate(-45deg) scale(1.3);
+  }
 }
 
 .review-slideshow {
