--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -577,13 +577,14 @@ a {
     position: relative;
     top: 104px;
     opacity: 0;
-    transition-property: all;
-    transition-duration: .5s;
-    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    transform: scale(.9);
   }
   &.slideUp {
     opacity: 1;
     top: 0;
+    transition-property: all;
+    transition-duration: .8s;
+    transform: scale(1);
   }
 }
 
@@ -596,16 +597,34 @@ a {
   bottom: 10%;
   left: 50%;
   &:hover {
-    bottom: 9%;
+    animation-name: scrollDown;
+    animation-duration: .7s;
+    animation-fill-mode: forwards;
+  }
+}
+
+@keyframes scrollDown {
+  20% {
+    bottom: 7%;
+    opacity: .9;
+  }
+  70% {
+    bottom: 8.5%;
+  }
+  80% {
+    bottom: 7.5%;
+  }
+
+  100% {
+    bottom: 8.5%;
     opacity: 1;
-    transition-property: all;
-    transition-duration: .5s;
-    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   }
 }
 
 
 #header-text {
+  position: relative;
+  z-index: 2;
   font-family: $font-brand;
   color: white;
   font-size: 1.5em;
