--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -31,6 +31,7 @@
           <li><a href="listings.html">LISTINGS</a></li>
           <li><a class="active" href="experience.html">EXPERIENCE</a></li>
           <li><a href="about.html">ABOUT</a></li>
+          <li><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a</li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
       </div>
