--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -106,7 +106,7 @@
               <div class="services-1 services-text">
                   <div class="medium-white-text"><strong>TENANT</strong> REPRESENTATION</div>
                   <div class="service-description">
-                    {{ page.tennant_service_text }}
+                    {{ page.tenant_service_text }}
                   </div>
                   <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
                 </div>
