Make services plural.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -106,21 +106,21 @@
               <div class="services-1 services-text">
                   <div class="medium-white-text"><strong>TENANT</strong> REPRESENTATION</div>
                   <div class="service-description">
-                    {{ page.tenant_service_text }}
+                    {{ page.tenant_services_blurb }}
                   </div>
                   <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
                 </div>
               <div class="services-2 services-text">
                 <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
                 <div class="service-description">
-                    {{ page.landlord_service_text }}
+                    {{ page.landlord_services_blurb }}
                 </div>
                 <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
               </div>
               <div class="services-text">
                 <div class="medium-white-text"><strong>INVESTMENT</strong> SALES</div>
                 <div class="service-description">
-                  {{ page.investment_service_text }}
+                  {{ page.investment_services_blurb }}
                 </div>
                 <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
               </div>
