--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,5 +1,5 @@
 <div class="contact-us-modal">
-  <div class="contact-form">
+  <div class="inner">
     <div class="contact-close"></div>
     <form id="gform" class="form" method="POST">
       <p class="contact-us">CONTACT US</p>
