--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -382,73 +382,69 @@ a {
   cursor: pointer;
 }
 
+.service-detail {
+  @include modal;
+}
+.services-modal-content {
+  padding: 36px;
+  color: #777777;
+  text-align: left;
+  .service-detail-close {
+    @include close-button;
+  }
+  > h1 {
+    margin: 0;
+  }
+}
 .contact-us-modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.8);
-  z-index: 101;
-  .contact-form {
-    width: 50%;
-    margin: 112px auto 0 auto;
-    font-size: 1.3em;
-    padding-bottom: 10px;
-    text-align: center;
-    background-color: white;
-    box-shadow: 0px 0px 18px 6px #f2f2f2;
-    position: relative;
-    max-width: 1200px;
-    .contact-close {
-      @include close-button;
-      position: absolute;
-      color: $primary-color;
-      cursor: pointer;
-      padding: 21px;
+  @include modal;
+  .contact-close {
+    @include close-button;
+    position: absolute;
+    color: $primary-color;
+    cursor: pointer;
+    padding: 21px;
+  }
+  .form {
+    margin: 36px;
+    > p {
+      padding-top: 75px;
+      font-weight: 50;
+      margin-bottom: 42px;
+      color: #777777;
+      opacity: .9;
+      font-size: 2em;
     }
-    .form {
-      margin: 36px;
-      > p {
-        padding-top: 75px;
-        font-weight: 50;
-        margin-bottom: 42px;
-        color: #777777;
-        opacity: .9;
-        font-size: 2em;
-      }
-      .validation {
-        display: block;
-        margin: 0 auto 18px auto;
-        width: 72%;
-        opacity: .8;
-        display: none;
-        text-align: left;
-        color: $primary-color;
-      }
-      > input {
-        display: block;
-        margin: 0 auto 18px auto;
-        width: 72%;
-        height: 2.8em;
-        opacity: .8;
-        border-style: solid;
-        border-width: thin;
-        border-color: #efefef;
-        background-color: #fcfcfc !important;
-      }
-      > button {
-        width: 72%;
-        height: 2em;
-        border-radius: 500px;
-        margin-top: 8px;
-        font-weight: 800;
-        color: $primary-color-darker-darker;
-        border-color: $primary-color-darker-darker;
-        border-style: solid;
-        margin-top: 20px;
-      }
+    .validation {
+      display: block;
+      margin: 0 auto 18px auto;
+      width: 72%;
+      opacity: .8;
+      display: none;
+      text-align: left;
+      color: $primary-color;
+    }
+    > input {
+      display: block;
+      margin: 0 auto 18px auto;
+      width: 72%;
+      height: 2.8em;
+      opacity: .8;
+      border-style: solid;
+      border-width: thin;
+      border-color: #efefef;
+      background-color: #fcfcfc !important;
+    }
+    > button {
+      width: 72%;
+      height: 2em;
+      border-radius: 500px;
+      margin-top: 8px;
+      font-weight: 800;
+      color: $primary-color-darker-darker;
+      border-color: $primary-color-darker-darker;
+      border-style: solid;
+      margin-top: 20px;
     }
   }
 }
@@ -766,6 +762,7 @@ a {
 
 .learn-more {
   max-width: 45%;
+  cursor: pointer;
 }
 
 .services-info {
@@ -1090,7 +1087,28 @@ a {
     width: 100%;
     height: 100%;
     overflow: scroll;
-    .contact-form {
+    .inner {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      margin-top: 0;
+      .form {
+        margin: 0;
+        > p {
+          padding-top: 20px;
+          font-size: 1.8em;
+        }
+      }
+    }
+  }
+
+  .service-detail {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    .inner {
       position: absolute;
       top: 0;
       left: 0;
