--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -46,3 +46,25 @@
   top: 18px;
   left: 14px;
 }
+
+@mixin modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 101;
+  background: rgba(255, 255, 255, 0.8);
+  .inner {
+    width: 50%;
+    margin: 112px auto 0 auto;
+    font-size: 1.3em;
+    padding-bottom: 10px;
+    text-align: center;
+    background-color: white;
+    box-shadow: 0px 0px 18px 6px #f2f2f2;
+    position: relative;
+    max-width: 1200px;
+  }
+}
