Change the listing filter from 'rent' to 'buy'... updates the fitler logic accordingly. Allow listings to be simulataneously for lease and buy.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,7 +47,7 @@
         {% for agent in site.agents %}
           <div class="agent-details" id="agent-{{forloop.index}}">
             <div class="content">
-              <div class="simple-close close-agent-detail"></div>
+              <div class="simple-close-small close-agent-detail"></div>
               <div class="header">
                 <img src="{{agent.avatar}}" class="bio-pic"/>
                 <div class="contact">
