Make footer link to for sale and for lease actually bring you to the listings page. Use query params to filter the paginated results accorindly.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <div class="inner">
     <div class="column">
       <div class="title">LISTINGS</div>
-      <a href="#">Properties For Sale</a>
-      <a href="#">Properties For Lease</a>
+      <a href="/listings.html?type=buy">Properties For Sale</a>
+      <a href="/listings.html?type=lease">Properties For Lease</a>
     </div>
     <div class="column">
       <div class="title">EXPERIENCE</div>
