--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,28 +33,40 @@
     <div class="main">
       <div id="tenant-service-modal" class="service-detail">
         <div class="inner">
-          <div class="services-modal-content">
+          <div class="services-modal-content content-tenant">
             <div class="service-detail-close"></div>
-            <h1>Tenant Representation</h1>
-            <p>{{page.tenant_services_text}}<p>
+            <div class="header">
+              <h1>Tenant Representation</h1>
+            </div>
+            <div class="content content-tenant">
+              <p>{{page.tenant_services_text}}<p>
+            </div>
           </div>
         </div>
       </div>
       <div id="landlord-service-modal" class="service-detail">
         <div class="inner">
-          <div class="services-modal-content">
+          <div class="services-modal-content content-landlord">
             <div class="service-detail-close"></div>
-            <h1>Landlord Representation</h1>
-            <p>{{page.landlord_services_text}}<p>
+            <div class="header">
+              <h1>Landlord Representation</h1>
+            </div>
+            <div class="content content-landlord">
+              <p>{{page.landlord_services_text}}<p>
+            </div>
           </div>
         </div>
       </div>
       <div id="investment-service-modal" class="service-detail">
         <div class="inner">
-          <div class="services-modal-content">
+          <div class="services-modal-content content-investments">
             <div class="service-detail-close"></div>
-            <h1>Investment Sales</h1>
-            <p>{{page.investment_services_text}}<p>
+            <div class="header">
+              <h1>Investment Sales</h1>
+            </div>
+            <div class="content content-investment">
+              <p>{{page.investment_services_text}}<p>
+            </div>
           </div>
         </div>
       </div>
