Include scroll reveal and apply it to most content. Center the testimonial navigation arrows. Add Documents link to footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,9 @@
     <div class="column">
       <div class="title contact-us-link">CONTACT</div>
     </div>
+    <div class="column">
+      <div class="title "><a href="https://ws.onehub.com/" target="_blank">DOCUMENTS</a></div>
+    </div>
 
     <!-- <div class="column social">
       <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
