--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -74,7 +74,10 @@
         "draggable": false,
         "dots": true,
         "arrows": false
-        })
+        });
+        window.sr = ScrollReveal();
+        sr.reveal(".top");
+        sr.reveal(".bottom");
       })
     </script>
   </body>
