Make check availability button on listing page bring up contact-us modal.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -99,7 +99,7 @@
               <div id="listings-sidebar">
                 <div class="menu-top">
                   <div class="buttons">
-                    <a href="#" class="cool-button">CHECK AVAILABILITY</a>
+                    <a class="cool-button contact-us-link">CHECK AVAILABILITY</a>
                     <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
                   </div>
                 </div>
